BACKEND-1: added database repository
