# docs/swagger.json
@@ -10,6 +10,35 @@
     },
     "basePath": "/3d-avatar/api",
     "paths": {
+        "/v1//3d-model-generation/task/:id/status": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "model/gltf-binary"
+                ],
+                "summary": "Get result .glb file",
+                "operationId": "3d-model-generation-get-result-file",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "UUID of task generated after uploading input image",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "file"
+                        }
+                    }
+                }
+            }
+        },
         "/v1/3d-model-generation/input-image": {
             "post": {
                 "consumes": [
@@ -33,7 +62,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/dtos.MediaDto"
+                            "$ref": "#/definitions/dtos.UploadInputImageResponse"
                         }
                     }
                 }
@@ -41,10 +70,24 @@
         }
     },
     "definitions": {
-        "dtos.MediaDto": {
+        "dtos.GetTaskStatusResponse": {
             "type": "object",
             "properties": {
                 "message": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "string"
+                }
+            }
+        },
+        "dtos.UploadInputImageResponse": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                },
+                "request_uuid": {
                     "type": "string"
                 }
             }
