# src/domain/dtos/mediaDto.go
@@ -1,5 +1,0 @@
-package dtos
-
-type MediaDto struct {
-	Message string    `json:"message"`
-}
