# src/presentation/controllers/mediaController.go
@@ -2,7 +2,6 @@ package controllers
 
 import (
 	"3d-avatar/backend-main/src/domain/dtos"
-	"3d-avatar/backend-main/src/data/models"
 	"3d-avatar/backend-main/src/domain/services"
 	"net/http"
 
@@ -10,25 +9,27 @@ import (
 )
 
 type MediaController interface {
-	FileUpload(ctx echo.Context) error
+	UploadInputImage(ctx echo.Context) error
+	GetTaskStatus(ctx echo.Context) error
+	GetTaskResultFile(ctx echo.Context) error
 }
 
 type mediaController struct {
-	MediaUpload services.MediaUpload
+	mediaService services.MediaService
 }
 
-func NewMediaController(service services.MediaUpload) MediaController {
+func NewMediaController(service services.MediaService) MediaController {
 	return &mediaController{
-		MediaUpload: service,
+		mediaService: service,
 	}
 }
 
-func (controller *mediaController) FileUpload(ctx echo.Context) error {
+func (controller *mediaController) UploadInputImage(ctx echo.Context) error {
 	fileHeader, err := ctx.FormFile("image")
 	if err != nil {
 		return ctx.JSON(
 			http.StatusInternalServerError,
-			&dtos.MediaDto{
+			&dtos.UploadInputImageResponse{
 				Message: "The data type expected to be an image",
 			},
 		)
@@ -38,31 +39,63 @@ func (controller *mediaController) FileUpload(ctx echo.Context) error {
 	if err != nil {
 		return ctx.JSON(
 			http.StatusInternalServerError,
-			&dtos.MediaDto{
-				Message: "Failed to retrieve file from header",
+			&dtos.UploadInputImageResponse{
+				Message: "Failed to retrieve file",
 			},
 		)
 	}
 	defer file.Close()
 
-	mediaFile := models.MediaFile{
-		Filename: fileHeader.Filename,
-		File:     file,
-	}
+	requestUuid, err := controller.mediaService.UploadFile(ctx.Request().Context(), &file)
 
-	if err := controller.MediaUpload.FileUpload(&mediaFile); err != nil {
+	if err != nil {
 		return ctx.JSON(
 			http.StatusInternalServerError,
-			&dtos.MediaDto{
-				Message: "An internal server error occured when saving the image.",
+			&dtos.UploadInputImageResponse{
+				Message: "An internal server error occured while processing the image.",
 			},
 		)
 	}
 
 	return ctx.JSON(
 		http.StatusOK,
-		&dtos.MediaDto{
-			Message: "Image uploaded successfully",
+		&dtos.UploadInputImageResponse{
+			Message:     "Image uploaded successfully",
+			RequestUuid: requestUuid,
 		},
 	)
+}
+
+func (controller *mediaController) GetTaskStatus(ctx echo.Context) error {
+	taskUuid := ctx.Param("id")
+
+	state, err := controller.mediaService.GetTaskStatus(ctx.Request().Context(), &taskUuid)
+	if err != nil {
+		return ctx.JSON(
+			http.StatusInternalServerError,
+			&dtos.GetTaskStatusResponse{
+				Message: "Failed to retrieve task status",
+			},
+		)
+	}
+
+	return ctx.JSON(
+		http.StatusOK,
+		&dtos.GetTaskStatusResponse{
+			Message: "Task status retrieved successfully",
+			Status:  state,
+		},
+	)
+}
+
+func (controller *mediaController) GetTaskResultFile(ctx echo.Context) error {
+	taskUuid := ctx.Param("id")
+
+	resultFilePath, err := controller.mediaService.
+		GetResultFilePath(ctx.Request().Context(), &taskUuid)
+	if err != nil {
+
+	}
+
+	return ctx.File(resultFilePath)
 }
